<resources>
    <string name="app_name">FinalProject</string>
    <string name="PersonName">Name</string>
    <string name="PersonSurname">Surname</string>
    <string name="PersonPhone">Phone</string>
    <string name="PersonWeight">Weight</string>
    <string name="PersonHeight">Height</string>
    <string name="PersonPassword">Password</string>
    <string name="Register">Register</string>
    <string name="SignUp">Sign Up</string>
    <string name="ChallengeButton">Challenges</string>
    <string name="WorkoutButton">Workout</string>
    <string name="ExercisesButton">Exercises</string>
    <string name="ProgressButton">Progress</string>
    <string name="SettingsButton">Settings</string>
    <string name="ChestText">Chest</string>
    <string name="ArmsText">Arms</string>
    <string name="LegsText">Legs</string>
    <string name="BackText">Back</string>
    <string name="CoreText">Core</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="SL_text">Here it\'s where your life will change, joins us now to forget your older self</string>
    <string name="PersonAge">Age</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="GiveFeedback">Give us your feedback!!</string>
    <string name="Subject">Subject</string>
    <string name="Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="Save">Save</string>
    <string name="giveFeedback">Want to give us your feedback?</string>
    <string name="ClickHere">Click here</string>
    <string name="WorkoutPlans">Workout Plans</string>
    <string name="NewWorkout">New workout plan</string>
    <string name="CreateNewPlan">Create new workout plan</string>
    <string name="PlanName">Enter plan name</string>
    <string name="CreatePlan">Create plan</string>
    <string name="ChooseExercise">Choose the exercices for your workout</string>
    <string name="ConfirmChoices">Confirm choices</string>
    <string name="ALL">ALL</string>
    <string name="DailyIntake">Daily caloric intakes</string>
    <string name="Cutting">Cutting:</string>
    <string name="Maintenance">Maintenance:</string>
    <string name="Bulking">Bulking:</string>
    <string name="Calories">Calories</string>
    <string name="TextCalories">Keep in mind that this is a recomended calory intake, it may vary from person to person and whether your doing a havier workout plan with more training days.</string>
</resources>