<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsScreen"
    android:background="#403F3F">

    <EditText
        android:id="@+id/name"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonName"
        android:inputType="text"
        android:textColor="@color/white"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSettings"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:text="@string/SettingsButton"
        android:textColor="#FBFBFB"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonSurname"
        android:inputType="text"
        android:textColor="@color/white"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.631" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonPhone"
        android:inputType="text"
        android:textColor="@color/white"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />

    <EditText
        android:id="@+id/age"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonAge"
        android:inputType="text"
        android:textColor="@color/white"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:ems="10"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonWeight"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <EditText
        android:id="@+id/height"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:ems="10"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonHeight"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textoDeFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:text="@string/giveFeedback"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/clickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:text="@string/ClickHere"
        android:textColor="#EC1111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toEndOf="@+id/textoDeFeedback"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:background="@drawable/arrow_back"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textSettings"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />
</androidx.constraintlayout.widget.ConstraintLayout>