<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_image"
    >

    <EditText
        android:id="@+id/personName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="John"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonName"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personSurname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="Henrick"
        android:ems="10"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonSurname"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personName" />

    <EditText
        android:id="@+id/personPhone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="920000000"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonPhone"
        android:inputType="number"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personSurname" />

    <EditText
        android:id="@+id/personAge"
        android:layout_width="0dp"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="23"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonAge"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personPhone" />

    <EditText
        android:id="@+id/personWeight"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="93.5"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonWeight"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personAge" />

    <EditText
        android:id="@+id/personHeigth"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="170.7"
        android:ems="10"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonHeight"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personWeight" />

    <EditText
        android:id="@+id/personPassword"
        android:layout_width="0dp"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/PersonPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personHeigth" />

    <Button
        android:id="@+id/personRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/alata"
        android:text="@string/Register"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personPassword"
        tools:text="@string/Register" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:text="@string/alreadyHaveAccount"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textLogIn"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personRegister"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/textLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/alata"
        android:shadowColor="#7F000000"
        android:shadowDx="1"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:text="@string/log_in"
        android:textColor="#E91E63"
        android:textColorHighlight="#F44336"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personRegister"
        app:layout_constraintVertical_bias="0.468" />
</androidx.constraintlayout.widget.ConstraintLayout>